--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,8 @@
 /mvnw text eol=lf
 *.cmd text eol=crlf
+
+*.sh text eol=lf
+*.cmd text eol=crlf
+*.java text eol=lf
+*.yml text eol=lf
+*.xml text eol=lf
