feat: Implémentation complète et fonctionnelle du filtre AI Shield. Correction du mécanisme d'Auto-Configuration (imports) et du positionnement du filtre (HIGHEST_PRECEDENCE).

--- a/spring-ai-shield-example/pom.xml
+++ b/spring-ai-shield-example/pom.xml
@@ -7,22 +7,30 @@
     <parent>
         <groupId>com.springaishield</groupId>
         <artifactId>spring-ai-shield-parent</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>3.0.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>spring-ai-shield-example</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
+        <!-- Dépendance Spring AI Shield (version héritée du parent) -->
         <dependency>
             <groupId>com.springaishield</groupId>
             <artifactId>spring-ai-shield-spring-boot</artifactId>
-            <version>${project.version}</version>
         </dependency>
 
+        <!-- Dépendances Spring Boot -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
         </dependency>
 
         <dependency>
