--- a/spring-ai-shield-example/src/main/resources/application.properties
+++ b/spring-ai-shield-example/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 # Affiche les requêtes SQL (utile pour le débogage)
 spring.jpa.show-sql=true
+
+logging.level.com.springaishield=INFO
