--- a/spring-ai-shield-core/pom.xml
+++ b/spring-ai-shield-core/pom.xml
@@ -7,18 +7,19 @@
 	<parent>
 		<groupId>com.springaishield</groupId>
 		<artifactId>spring-ai-shield-parent</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>3.0.0-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 
 	<artifactId>spring-ai-shield-core</artifactId>
+	<version>3.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
+
 	<dependencies>
+		<!-- Exemple : dépendance Spring Boot -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-autoconfigure</artifactId>
-			<version>3.5.7</version>
-			<scope>compile</scope>
 		</dependency>
 	</dependencies>
-
 </project>
