--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.springaishield</groupId>
     <artifactId>spring-ai-shield-parent</artifactId>
-    <version>3.0.0-SNAPSHOT</version>
+    <version>3.1.0</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -24,7 +24,6 @@
 
     <dependencyManagement>
         <dependencies>
-
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
@@ -32,18 +31,15 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-
-
             <dependency>
                 <groupId>com.springaishield</groupId>
                 <artifactId>spring-ai-shield-core</artifactId>
-                <version>${project.version}</version>
+                <version>3.1.0</version>
             </dependency>
-
             <dependency>
                 <groupId>com.springaishield</groupId>
                 <artifactId>spring-ai-shield-spring-boot</artifactId>
-                <version>${project.version}</version>
+                <version>3.1.0</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
