--- a/spring-ai-shield-spring-boot/pom.xml
+++ b/spring-ai-shield-spring-boot/pom.xml
@@ -7,12 +7,11 @@
     <parent>
         <groupId>com.springaishield</groupId>
         <artifactId>spring-ai-shield-parent</artifactId>
-        <version>3.0.0-SNAPSHOT</version>
+        <version>3.1.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>spring-ai-shield-spring-boot</artifactId>
-    <version>3.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <dependencies>
@@ -20,23 +19,19 @@
             <groupId>com.springaishield</groupId>
             <artifactId>spring-ai-shield-core</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-
         <dependency>
             <groupId>jakarta.servlet</groupId>
             <artifactId>jakarta.servlet-api</artifactId>
             <scope>provided</scope>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
